# picolayer

./: .gitignore  .mega-linter.yml  .pre-commit-config.yaml  .prettierrc  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  install.sh  package-lock.json  package.json  renovate.json
.devcontainer/: devcontainer.json  post_create.sh
.github/actions/check-binary-size/: action.yml
.github/actions/setup-alpine-rust/: action.yml
.github/actions/setup-cross-compile/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  devcontainer.yml  docker.yml  lint.yml  pre-commit.yml  release-nightly.yml  release.yml  renovate.yml  semantic-release.yml
src/: error.rs  lib.rs  main.rs  run.rs
src/cli/: args.rs  handlers.rs  mod.rs
src/installers/: mod.rs  npm.rs  pipx.rs
src/installers/devcontainer_feature/: client.rs  feature.rs  installer.rs  mod.rs
src/installers/gh_release/: client.rs  extractor.rs  mod.rs  selector.rs  verifier.rs
src/installers/package_manager/: apk.rs  apt_based.rs  brew.rs  mod.rs
src/installers/pkgx/: mod.rs  resolver.rs
src/utils/: logging.rs  mod.rs  os.rs  retry.rs  subprocess.rs  sudo.rs
tests/: integration_tests.rs  main_test.rs  run_test.rs
tests/common/: mod.rs
tests/installers/: mod.rs
tests/installers/devcontainer_feature/: devcontainer_feature_test.rs  mod.rs
tests/installers/gh_release/: gh_release_test.rs  mod.rs
tests/installers/npm/: npm_test.rs
tests/installers/package_manager/: apk_test.rs  apt_get_test.rs  brew_test.rs  mod.rs
tests/installers/pipx/: pipx_test.rs
tests/installers/pkgx/: mod.rs  pkgx_test.rs
tests/utils/: sudo_test.rs
